# amadeus_backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.bat  run.sh  unified_llm_api.py
config/: llm_provider.toml  prompt_amadeus.yaml
llm_toolkit/: __init__.py  unified_llm_api.py  utils.py
schemas/: __init__.py  command.py
test/: ollama_test.py
test/llm/: test_all_providers.py
test/movement/: test2local.py  test2pi.py
