[project]
name = "latest-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "loguru>=0.7.3",
    "ollama>=0.6.0",
    "requests>=2.32.5",
    "ruff>=0.14.1",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.38.0",
]
